--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -191,6 +191,15 @@
   border-radius: 50%;
 }
 
+.profile_img_medium {
+  max-width: 40px;
+  min-width: 40px;
+  width: 40px !important;
+  height: 40px;
+  border-radius: 50%;
+  padding: 0px;
+}
+
 .newpost--profile {
   color: white;
   background-color: #2a2a2a;
