--- a/app/views/posts/_draft.html.erb
+++ b/app/views/posts/_draft.html.erb
@@ -106,6 +106,36 @@
               <div id="selectable_content" class="post_content">
                 <%= markdown @post.content %>
               </div>
+              <% if @should_show_editor_form %>
+                <%= form_for @post do |f| %>
+                  <%= f.fields_for :reviews, @review do |rv| %>
+                    <%= render "posts/editor_review_form", rv: rv, f: f, post: @post %>
+                  <% end %>
+                <% end %>
+                <% if current_user.is_reviewing_post(@post.id) %>
+                  <% if @post.editor_can_make_changes %>
+                    <p>
+                      <i>
+                        The writer has given permission for you to make changes to this article.
+                        These changes may include improving formatting, grammar/punctuation, thumbnail image, and/or title optimization.
+                        Larger edits should be sent back for changes.
+                      </i>
+                    </p>
+                    <div id="admin_links" style="border-top: 1px solid #E9E9E9;border-bottom: 1px solid #E9E9E9;text-align: center;padding: 1em 0;margin: 1em 0;margin-top: 0;">
+                      <% if !(@post.is_locked?) %>
+                        <%= link_to "Edit Article", edit_post_path(@post), style: "text-decoration: none;color: #9a9da4;margin: 0 1em;font-weight: 700;font-size: .8em;text-transform: uppercase;font-family: inherit;" %>
+                      <% end %>
+                      <% if current_user && (current_user.id == @post.user_id || current_user.admin) %>
+                        <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this article?"}, style: "text-decoration: none;color: #9a9da4;margin: 0 1em;font-weight: 700;font-size: .8em;text-transform: uppercase;font-family: inherit;" %>
+                      <% end %>
+                    </div>
+                  <% else %>
+                    <p style="background-color: #FCD04D;">
+                      The writer has not given permission for you to make changes to this article.
+                    </p>
+                  <% end %>
+                <% end %>
+              <% end %>
               <% if params[:shareable_token].nil? %>
                 <% if current_user && current_user.can_edit_post(@post) %>
                   <div id="admin_links" style="border-top: 1px solid #E9E9E9;border-bottom: 1px solid #E9E9E9;text-align: center;padding: 1em 0;margin: 1em 0;margin-top: 0;">
@@ -134,11 +164,22 @@
       <% if params[:shareable_token].nil? %>
         <div id="comments" class="share_article_feedback share_article_feedback_skinny">
           <% if @post.partner_id.present? %>
-            <%= render :partial => 'posts/partials/partner_comments', locals: {partner: @partner, post: @post, comments: @comments, comment: @comment} %>
-          <% elsif @post.sharing %>
-            <%= render :partial => 'posts/partials/sharing_on', locals: {user: @user, post: @post, comments: @comments, comment: @comment}  %>
-          <% elsif (current_user.admin? || current_user.id == @post.user_id) %>
-            <%= render :partial => 'posts/partials/sharing_off', locals: {post: @post} %>
+            <%= render :partial => 'posts/partials/comments/partner_comments', locals: {partner: @partner, post: @post, comments: @comments, comment: @comment} %>
+          <% else %>
+            <%= render :partial => 'posts/partials/comments/comments_draft', locals: {user: current_user, post: @post, comments: @comments, comment: @comment} %>
+          <% end %>
+          <% if !@post.is_in_review? %>
+            <% if @post.sharing %>
+              <p>This draft is currently viewable by other writers in the community.</p>
+              <% if (current_user.admin? || current_user.id == @post.user_id) %>
+                <div class="btn_cntnr margin_top_20">
+                  <%= link_to "Turn off sharing", post_path(@post, sharing: false), :data => {:confirm => "Are you sure you want to turn off peer sharing?"}, class: "newpost--new--profile", style: "float: right;" %>
+                </div>
+              <% end %>
+            <% elsif (current_user.admin? || current_user.id == @post.user_id) %>
+              <p>This draft is not being shared in the community.</p>
+              <%= link_to "Turn on sharing", post_path(@post, sharing: true), class: "newpost--new--profile" %>
+            <% end %>
           <% end %>
         </div>
       <% else %>
